--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@
     padding: 0px;
     margin: 0px;
 }
-
-.header{
-    box-shadow: 0 0 10px 0;
+body{
+    margin:20px;
 }
+.header{
+    box-shadow: 0 0 10px 0;     
+}
+
 .top-bar {
     background-color: blue;
     padding: 15px;
@@ -14,26 +17,28 @@
 
 .left-block {
     padding:50px 0px;
-    width:80%;
+    width:77%;
     color:white;
 }
 
-.left-block h1{
+.left-block h1 {
     font-size : 3rem;
 }
+
 .left-block h3 {
     font-size: 1.9rem;
 }
 
 .right-block {
     display:flex;
-    width:20%;
+    width: 23%;
     background-color: green;
     color:blue;
     align-items: center;
     justify-content: center;
 }
-.right-block p{
+
+.right-block p {
     font-size:2rem;
     font-weight: bold;
 }
@@ -47,22 +52,30 @@
     list-style-type: none;
     justify-content: center;
     border: 1px solid lightgreen;
-    padding: 6px;
+
 }
 
 .nav ul li {
-    padding: 10px 2px;
-    margin:1px;
+    padding: 6px 2px;
+    margin: 1px;
     border-left: 1px solid white;   
     border-right: 1px solid grey;
 }
+.sidebar ul li {
+    list-style-type: none;
+    padding: 6px 2px;
+    border-bottom: 1px solid white;
+    font-size: 20px;
+}
 
-.nav ul li a {
+.nav ul li a,.sidebar ul li a {
     text-decoration: none;
     color:white;
-    font-size:30px;
+    font-size: 25px;
     padding: 5px 20px;
+    font-weight: bold;
 }
+
 
 .maincontent {
     display:flex;
@@ -72,8 +85,85 @@
     width:25%;
     background-color: blue;
     margin-top: 3rem;
+    height: fit-content;
 }
 
 .article {
-    background-color: lightgreen;
+    width: 75%;
+    padding: 10px;
+}
+
+.article h1{
+    margin: 14px 0;
+    text-align: center;
+    color:blue;
+}
+
+.green {
+    background-color: green;
+}
+
+.white {
+    background-color: white;
+        height: 6px;
+}
+
+.small {
+    font-size: 8px;
+    position: relative;
+    bottom: 6px;
+}
+
+.article p {
+    font-size: 20px;
+}
+
+.article h2 {
+    color: green;
+    margin: 27px 0;
+}
+
+.article h3 {
+    text-align: center;
+    margin: 35px 0;
+}
+
+.otherh2 {
+    text-align: center;
+    color: black !important;
+}
+
+.article .otherh3 {
+    background-color: green;
+    text-align: left;
+    color:white;
+    padding: 5px 10px;
+    margin: 20px 0;
+}
+
+.grey {
+    color:grey !important;
+}
+
+hr {
+    margin: 10px 0 0 -10px;
+    width: 102%;
+    color:lightgrey
+}
+
+.parent {
+    display: flex;
+    font-size: 20px;
+}
+
+.parent .mark {
+    width: 4%;
+    text-align: center;
+    padding-left: 11px; 
+}
+.parent .content {
+    width: 92%;
+}
+.padbot {
+    padding-bottom: 15px;
 }
